FIx- Dark mode value store in session storage as a getting vanish in page reload/refresh

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -80,6 +80,7 @@
   .white-logo, .logo {
     height: 60px;
     width: 80px;
+    cursor: pointer;
   }
   .white-logo {
     img {
